tests/errors/less_than_handler.eff
(handler val x -> 2 * x) < (handler val x -> 3 * x) ;;
